# chat-app-task

./: .gitignore  backend.db.sqlite3  requirements.txt
backend/: main.py  pyproject.toml  r.txt  report.md  socket_app.py
backend/api/: auth.py  messages.py  users.py
backend/api/ws/: __init__.py  chat.py
backend/core/: config.py  db.py
backend/models/: message.py  user.py
backend/schemas/: message.py  user.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Auth.css  AuthScreen.jsx  ChatWindow.css  ChatWindow.jsx  Login.jsx  Signup.jsx
